# DiscordChill

./: .env  bot.py  ge.py  logger_config.py  main.py  main.sqlite  pyproject.toml  requirements.txt  test.py
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
logs/: logger_config.py
plugins/autorole/: main.py  old.txt
plugins/bienvenue/: channels.json  main.py
plugins/bienvenue/datafile/: channels.json  left_msg.json  logs.json
plugins/dashboard/: gre.py  leaderboard.py  main.py  test.py
plugins/dashboard/.streamlit/: config.toml
plugins/fun/: main.py
plugins/hotreload/: main.py  save.json
plugins/invite/: main.py
plugins/moderation/: channels.json  main.py
plugins/niveau/: blocked.json  channels.json  dashboard.py  fz.py  ignored_channels.json  main.py  rank.sqlite  utility.py
plugins/ping/: main.py
plugins/record/: main.py
plugins/vocal/: category.json  channels.json  main.py
plugins/youtube/: channel_ytb.json  channels.json  main.py
