[project]
name = "discordchill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite==0.19.0",
    "discord-py==2.3.2",
    "feedparser>=6.0.12",
    "gitpython==3.1.40",
    "icecream==2.1.3",
    "numpy==1.26.2",
    "pillow==10.1.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "scrapetube==2.5.1",
]
